--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,9 @@
 0) running the application -ok
 1) update docker configuration files -ok
-2) review project structure
-3) review pkg names
+2) review project structure -ok
+3) review pkg names -ok
 4) fix security issue
-5) review assets folder
+5) review assets folder -ok
 6) run deadcode tool
+7) change zap log
+8) review README
